# 2025_PAC

./: .gitignore  CMakeLists.txt  dgemm_blocked2_ref.cpp  main.cpp  test_g.cpp
src/: dgemm_blocked1.cpp  dgemm_blocked1_ref.cpp  dgemm_blocked2.cpp  dgemm_blocked2_0.cpp  dgemm_blocked2_1.cpp  dgemm_blocked2_2.cpp  dgemm_blocked3.cpp  dgemm_blocked4.cpp  dgemm_oBlas.cpp  gemm.py  kernels.h
src/tmp/: matmul
